# cmake_example

./: README.md
lib/: CMakeLists.txt  build.sh
lib/include/: example.h
lib/src/: example.cpp
multi_lib/: CMakeLists.txt  build.sh  build_test.sh
multi_lib/lib0/: CMakeLists.txt
multi_lib/lib0/include/: example0.h
multi_lib/lib0/src/: example.cpp
multi_lib/lib1/: CMakeLists.txt
multi_lib/lib1/include/: example1.h
multi_lib/lib1/src/: example.cpp
multi_lib/test/: CMakeLists.txt
multi_lib/test/src/: main.cpp
